# wwd-actix

./: .gitignore  Cargo.toml  README.md
src/: config.rs  filters.rs  forecast.rs  handler.rs  main.rs
templates/: index.html
